liveusb/config/minimal/opt/liveusb/airootfs/minimal/opt/container/airootfs/default/etc/iptables/iptables.rules
# Generated by iptables-save v1.4.21 on Thu Sep 17 17:12:44 2015
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT DROP [0:0]
-A INPUT -p icmp -j DROP
-A INPUT -m conntrack --ctstate INVALID -j DROP
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED --ctproto 6 -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED --ctproto 17 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 31279 -j ACCEPT
-A INPUT -p udp -m udp --dport 68 -j ACCEPT
-A INPUT -d 127.0.0.1/32 -p tcp -m tcp --dport 6010:6023 -j ACCEPT
-A INPUT -j DROP
-A OUTPUT -p icmp -j DROP
-A OUTPUT -o LO -j ACCEPT
-A OUTPUT -p tcp -m tcp --sport 31279 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -p tcp -m multiport --dports 80,443 -j ACCEPT
-A OUTPUT -p udp -m multiport --dports 53,67,31279 -j ACCEPT
COMMIT
# Completed on Thu Sep 17 17:12:44 2015
# Generated by iptables-save v1.4.21 on Thu Sep 17 17:12:44 2015
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
COMMIT
# Completed on Thu Sep 17 17:12:44 2015
# Generated by iptables-save v1.4.21 on Thu Sep 17 17:12:44 2015
*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
COMMIT
# Completed on Thu Sep 17 17:12:44 2015
# Generated by iptables-save v1.4.21 on Thu Sep 17 17:12:44 2015
*raw
:PREROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
COMMIT
# Completed on Thu Sep 17 17:12:44 2015
# Generated by iptables-save v1.4.21 on Thu Sep 17 17:12:44 2015
*security
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
COMMIT
# Completed on Thu Sep 17 17:12:44 2015
